@@ -1,3 +1,5 @@
+2016-09-20 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * remove specinfra patch and use specinfra >= 2.63.0 (which is fixed)
 2016-09-18 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.2.0
   * several fixes, mainly for older FreeBSD
